# raytracer_rs

./: .gitignore  Cargo.toml  teapot.tri  test_scene.toml
src/: camera.rs  config.rs  hittable.rs  image.rs  main.rs  material.rs  ray.rs  scene.rs  util.rs  vec.rs
src/hittable/: cube.rs  mesh.rs  plane.rs  rectangle.rs  sphere.rs  triangle.rs
src/material/: dielectric.rs  diffuse.rs  reflective.rs
