[package]
name = "raytracer_rs"
version = "0.1.0"
edition = "2021"
authors = ["Akari202 <akaritwo0two@gmail.com>"]
description = "A raytracer written in Rust"
license = "GPL-3.0"

[dependencies]
png = "0.17.10"
rayon = "1.8.0"
log = "0.4.20"
env_logger = "0.10.0"
rand = "0.8.5"
toml = "0.8.6"
serde = { version = "1.0.190", features = ["derive"] }
notify = "6.1.1"
